tweak nav styling to add Ubuntu font and correct sizing and spacing

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -7,6 +7,7 @@ $nav-shadow:0px 2px 6px rgba(0,0,0,0.2);
 $header-height:10px;
 
 .site-header {
+	@include box-sizing(content-box);
 	position:relative;
 	height:$header-height;
 
@@ -23,7 +24,7 @@ $header-height:10px;
 		position:relative;
 		float:left;
 		margin:0;
-		padding:0.25em 1.5em;
+		padding:0.751em 2em;
 
 		font-size:0.875em; // 14px / 16px
 		color:$color-link-nav;
